CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(otah C)

SET(C_STANDARD 11)

ADD_SUBDIRECTORY(lib/layman)

ADD_EXECUTABLE(otah src/main.c)
TARGET_LINK_LIBRARIES(otah PUBLIC layman)
TARGET_COMPILE_OPTIONS(otah PUBLIC "$<$<CONFIG:DEBUG>:-O0;-g;-ggdb>")
TARGET_COMPILE_OPTIONS(otah PUBLIC "$<$<CONFIG:RELEASE>:-O3>")